// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ParticipationButton > Show Basic 1`] = `
"<div class="ml-auto w-min">
  <div data-oruga="dropdown" class="o-drop o-drop--position-bottom-left">
    <div tabindex="0" class="o-drop__trigger" aria-haspopup="true"><button type="button" class="o-btn o-btn--large o-btn--primary" role="button" data-oruga="button"><span class="o-btn__wrapper"><!----><span class="o-btn__label">Participate</span><span class="o-icon o-icon--large o-btn__icon o-btn__icon-right" data-oruga="icon"><i class="mdi mdi-menu-down mdi-48px"></i></span></span></button></div>
    <!--teleport start-->
    <transition-stub name="fade" appear="false" persisted="false" css="true">
      <!---->
    </transition-stub>
    <transition-stub name="fade" appear="false" persisted="false" css="true">
      <div class="o-drop__menu o-drop__menu--bottom-left" role="list" aria-hidden="true" aria-modal="true" style="display: none;">
        <div class="o-drop__item o-drop__item--clickable" role="listitem" tabindex="0" data-oruga="dropdown-item">
          <div class="flex gap-2 items-center">
            <figure class=""><img class="rounded-xl" src="https://mobilizon.fr/media/3a5f18c058a8193b1febfaf561f94ae8b91f85ac64c01ddf5ad7b251fb43baf5.jpg?name=profil.jpg" alt="" width="24" height="24"></figure>
            <div class=""><span>as Thomas</span></div>
          </div>
        </div>
        <div class="o-drop__item o-drop__item--clickable" role="listitem" tabindex="0" data-oruga="dropdown-item">with another identity…</div>
      </div>
    </transition-stub>
    <!--teleport end-->
  </div>
</div>"
`;

exports[`ParticipationButton > Show Basic with confirmation 1`] = `
"<div class="ml-auto w-min">
  <div data-oruga="dropdown" class="o-drop o-drop--position-bottom-left">
    <div tabindex="0" class="o-drop__trigger" aria-haspopup="true"><button type="button" class="o-btn o-btn--large o-btn--primary" role="button" data-oruga="button"><span class="o-btn__wrapper"><!----><span class="o-btn__label">Participate</span><span class="o-icon o-icon--large o-btn__icon o-btn__icon-right" data-oruga="icon"><i class="mdi mdi-menu-down mdi-48px"></i></span></span></button></div>
    <!--teleport start-->
    <transition-stub name="fade" appear="false" persisted="false" css="true">
      <!---->
    </transition-stub>
    <transition-stub name="fade" appear="false" persisted="false" css="true">
      <div class="o-drop__menu o-drop__menu--bottom-left" role="list" aria-hidden="true" aria-modal="true" style="display: none;">
        <div class="o-drop__item o-drop__item--clickable" role="listitem" tabindex="0" data-oruga="dropdown-item">
          <div class="flex gap-2 items-center">
            <figure class=""><img class="rounded-xl" src="https://mobilizon.fr/media/3a5f18c058a8193b1febfaf561f94ae8b91f85ac64c01ddf5ad7b251fb43baf5.jpg?name=profil.jpg" alt="" width="24" height="24"></figure>
            <div class=""><span>as Thomas</span></div>
          </div>
        </div>
        <div class="o-drop__item o-drop__item--clickable" role="listitem" tabindex="0" data-oruga="dropdown-item">with another identity…</div>
      </div>
    </transition-stub>
    <!--teleport end-->
  </div>
</div>"
`;

exports[`ParticipationButton > Show Participating 1`] = `
"<div class="ml-auto w-min">
  <div data-oruga="dropdown" class="o-drop o-drop--position-bottom-left">
    <div tabindex="0" class="o-drop__trigger" aria-haspopup="true"><button type="button" class="o-btn o-btn--large o-btn--success" role="button" data-oruga="button"><span class="o-btn__wrapper"><span class="o-icon o-icon--large o-btn__icon o-btn__icon-left" data-oruga="icon"><i class="mdi mdi-check mdi-48px"></i></span><span class="o-btn__label">I participate</span><span class="o-icon o-icon--large o-btn__icon o-btn__icon-right" data-oruga="icon"><i class="mdi mdi-menu-down mdi-48px"></i></span></span></button></div>
    <!--teleport start-->
    <transition-stub name="fade" appear="false" persisted="false" css="true">
      <!---->
    </transition-stub>
    <transition-stub name="fade" appear="false" persisted="false" css="true">
      <div class="o-drop__menu o-drop__menu--bottom-left" role="list" aria-hidden="true" aria-modal="true" style="display: none;">
        <div class="o-drop__item o-drop__item--clickable" role="listitem" tabindex="0" data-oruga="dropdown-item">Cancel my participation…</div>
      </div>
    </transition-stub>
    <!--teleport end-->
  </div>
</div>"
`;

exports[`ParticipationButton > Show Pending approval 1`] = `
"<div class="ml-auto w-min">
  <div class="flex flex-col">
    <div data-oruga="dropdown" class="o-drop o-drop--position-bottom-left">
      <div tabindex="0" class="o-drop__trigger" aria-haspopup="true"><button type="button" class="o-btn o-btn--large o-btn--success" role="button" data-oruga="button"><span class="o-btn__wrapper"><!----><span class="o-btn__label"><template class="flex items-center"></template></span>
          <!----></span>
        </button></div>
      <!--teleport start-->
      <transition-stub name="fade" appear="false" persisted="false" css="true">
        <!---->
      </transition-stub>
      <transition-stub name="fade" appear="false" persisted="false" css="true">
        <div class="o-drop__menu o-drop__menu--bottom-left" role="list" aria-hidden="true" aria-modal="true" style="display: none;">
          <div class="o-drop__item o-drop__item--clickable" role="listitem" tabindex="0" data-oruga="dropdown-item">Change my identity…</div>
          <div class="o-drop__item o-drop__item--clickable" role="listitem" tabindex="0" data-oruga="dropdown-item">Cancel my participation request…</div>
        </div>
      </transition-stub>
      <!--teleport end-->
    </div>
    <p>Participation requested!</p>
    <p>Waiting for organization team approval.</p>
  </div>
</div>"
`;

exports[`ParticipationButton > Show Rejected 1`] = `
"<div class="ml-auto w-min">
  <div><span>Unfortunately, your participation request was rejected by the organizers.</span></div>
</div>"
`;

exports[`ParticipationButton > Show Unlogged 1`] = `
"<div class="ml-auto w-min"><a href="/events/0123456789/participate/with-account" class="o-btn o-btn--large o-btn--primary" role="button" data-oruga="button" rel="nofollow"><span class="o-btn__wrapper"><!----><span class="o-btn__label">Participate</span>
    <!----></span>
  </a></div>"
`;
